# ocrtoc_motion_planning

./: .gitmodules  README.md  requirements.txt
gazebo_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gazebo_robot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  ur5e.srdf
gazebo_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5e_moveit_controller_manager.launch.xml  warehouse.launch
ocrtoc_motion_planning/: CMakeLists.txt  package.xml  setup.py
ocrtoc_motion_planning/data/: ik_database.pkl  symmetry.csv
ocrtoc_motion_planning/include/: ur5_kinematics_service.hpp
ocrtoc_motion_planning/launch/: motion_planning_pre.launch  motion_planning_pre_gazebo.launch  motion_planning_pre_sapien.launch  motion_planning_pre_sapien_bk.launch  self_seen_links.yaml  self_seen_links_bk.yaml  test_self_filter.launch
ocrtoc_motion_planning/msg/: GlobalGraspPose.msg  PointCloudFilterAction.msg
ocrtoc_motion_planning/scene_info/: 1-1.json
ocrtoc_motion_planning/scripts/: depth_to_pcd_functions.py  depth_to_pcd_kinect.py  depth_to_pcd_merger.py  frames.gv  generate_model_pcd.sh  grasp_plan_server.py  gripper_test.py  ik_by_forward.py  ik_database.pkl  ik_disrete_left_product.py  ik_try_discrete.py  motion_planner.py  motion_planning.py  motion_planning_execution.py  motion_planning_functions.py  motion_planning_utils.py  moveit_connection.py  one_shot_grasp_with_grasp_pose_server.py  one_shot_grasp_with_object_pose_server.py  one_shot_grasp_with_object_pose_server_bk.py  pcd_filter.py  pcd_publisher.py  point_cloud_merger.py  pose_plan_client.py  pose_plan_server.py  quar_test.py  shiyang.py  tune_ik_transformation.py
ocrtoc_motion_planning/scripts/config/: sensor_manager.launch.xml
ocrtoc_motion_planning/scripts/tools/: mesh_preprocess.py
ocrtoc_motion_planning/simple_scene/: 4-4.world  input.world
ocrtoc_motion_planning/src/: ur5_kinematics_service.cpp
ocrtoc_motion_planning/srv/: GraspPlan.srv  OneShotGraspPlanWithGraspPose.srv  OneShotGraspPlanWithObjectPose.srv  PosePlan.srv  UR5IKService.srv
sapien_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sapien_robot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  joint_limits_bk.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  ur5e.srdf  ur5e_bk.srdf
sapien_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5e_moveit_controller_manager.launch.xml  warehouse.launch
